# firecracker

./: Cargo.toml
src/api_server/src/request/: machine_configuration.rs
src/arch/src/: lib.rs
src/arch/src/x86_64/: gdt.rs  layout.rs  mod.rs  mptable.rs  msr.rs  regs.rs  sev.rs
src/arch_gen/: Cargo.toml
src/arch_gen/src/x86/: bootparam.rs
src/devices/: Cargo.toml
src/devices/src/pseudo/: debug_port.rs  fw_cfg.rs  mod.rs
src/devices/src/virtio/block/: device.rs
src/devices/src/virtio/net/: device.rs
src/kernel/: Cargo.toml
src/kernel/src/loader/: elf.rs  extable.rs  fgkaslr.rs  mod.rs
src/vm-memory/src/: lib.rs
src/vmm/src/: builder.rs  lib.rs  memory_snapshot.rs  resources.rs
src/vmm/src/device_manager/: legacy.rs
src/vmm/src/utilities/mock_resources/: mod.rs
src/vmm/src/vmm_config/: boot_source.rs  machine_config.rs  mod.rs  sev_config.rs
src/vmm/src/vstate/: vm.rs
src/vmm/src/vstate/vcpu/: mod.rs  x86_64.rs
